update kernel driver for wiringpi support

--- a/linux-sunxi/arch/arm/configs/sun6i_bpi_defconfig
+++ b/linux-sunxi/arch/arm/configs/sun6i_bpi_defconfig
@@ -1506,15 +1506,8 @@ CONFIG_SUNXI_PHYS_MEM_ALLOCATOR=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-CONFIG_I2C_CHARDEV=m
-CONFIG_I2C_MUX=m
-
-#
-# Multiplexer I2C Chip support
-#
-CONFIG_I2C_MUX_GPIO=m
-CONFIG_I2C_MUX_PCA9541=m
-CONFIG_I2C_MUX_PCA954x=m
+CONFIG_I2C_CHARDEV=y
+# CONFIG_I2C_MUX is not set
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_I2C_ALGOBIT=y
 
@@ -1558,19 +1551,20 @@ CONFIG_SPI_MASTER=y
 # SPI Master Controller Drivers
 #
 # CONFIG_SPI_ALTERA is not set
-CONFIG_SPI_BITBANG=m
-CONFIG_SPI_GPIO=m
+CONFIG_SPI_BITBANG=y
+CONFIG_SPI_GPIO=y
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PL022 is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
-# CONFIG_SPI_SUN6I is not set
+CONFIG_SPI_SUN6I=y
 # CONFIG_SPI_XILINX is not set
-# CONFIG_SPI_DESIGNWARE is not set
+CONFIG_SPI_DESIGNWARE=y
+CONFIG_SPI_DW_MMIO=y
 
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 
 #
@@ -3131,7 +3125,7 @@ CONFIG_BITREVERSE=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
-# CONFIG_CRC_T10DIF is not set
+CONFIG_CRC_T10DIF=y
 CONFIG_CRC_ITU_T=y
 CONFIG_CRC32=y
 # CONFIG_CRC7 is not set
