--- a/linux-sunxi/arch/arm/configs/sun6i_bpi_defconfig
+++ b/linux-sunxi/arch/arm/configs/sun6i_bpi_defconfig
@@ -1991,9 +1991,32 @@ CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_VIDEO_SUN6I_CEDAR=y
 CONFIG_VIDEO_DECODER_SUN6I=y
-# CONFIG_VIDEO_CSI_SUNXI is not set
-CONFIG_VIDEO_SUNXI_VFE=y
-CONFIG_CSI_VFE=m
+CONFIG_VIDEO_CSI_SUNXI=y
+# CONFIG_VIDEO_SUNXI_VFE is not set
+CONFIG_CSI_DEV_SEL=m
+CONFIG_CSI1_SUNXI=m
+# CONFIG_CSI_OV7670 is not set
+# CONFIG_CSI_GT2005 is not set
+# CONFIG_CSI_GC0308 is not set
+# CONFIG_CSI_HI704 is not set
+# CONFIG_CSI_SP0838 is not set
+# CONFIG_CSI_MT9P111 is not set
+# CONFIG_CSI_MT9M112 is not set
+# CONFIG_CSI_MT9M113 is not set
+# CONFIG_CSI_OV2655 is not set
+# CONFIG_CSI_HI253 is not set
+# CONFIG_CSI_MT9D112 is not set
+# CONFIG_CSI_GC0307 is not set
+CONFIG_CSI_OV5640=m
+# CONFIG_CSI_OV5640_MIPI is not set
+# CONFIG_CSI_GC2015 is not set
+# CONFIG_CSI_OV2643 is not set
+# CONFIG_CSI_GC0329 is not set
+# CONFIG_CSI_GC0309 is not set
+# CONFIG_CSI_TVP5150 is not set
+# CONFIG_CSI_S5K4EC is not set
+# CONFIG_CSI_GC2035 is not set
+# CONFIG_CSI_OV5642 is not set
 # CONFIG_RADIO_ADAPTERS is not set
 
 #
@@ -2889,7 +2912,7 @@ CONFIG_NLS_UTF8=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
+CONFIG_DEFAULT_MESSAGE_LOGLEVEL=7
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=1024
