--- a/sunxi-pack/chips/sun6i/configs/linux/default/env.cfg
+++ b/sunxi-pack/chips/sun6i/configs/linux/default/env.cfg
@@ -1,12 +1,10 @@
-bootdelay=1
-#default bootcmd, will change at runtime according to key press
-bootcmd=run setargs_nand boot_normal#default nand boot
+
 #kernel command arguments
 console=ttyS0,115200
 nand_root=/dev/nandd
-mmc_root=/dev/mmcblk0p7
+mmc_root=/dev/mmcblk0p2 rootwait
 init=/init
-loglevel=7
+loglevel=8
 #set kernel cmdline if boot.img or recovery.img has no cmdline we will use this
 setargs_nand=setenv bootargs console=${console} root=${nand_root} init=${init} loglevel=${loglevel} partitions=${partitions}
 setargs_mmc=setenv bootargs console=${console} root=${mmc_root} init=${init} loglevel=${loglevel} partitions=${partitions}
@@ -14,6 +12,32 @@ setargs_mmc=setenv bootargs console=${console} root=${mmc_root} init=${init} log
 #0x40007800 = 0x40008000(kernel entry) - 0x800(boot.img header 2k)
 boot_normal=sunxi_flash read 40007800 boot;boota 40007800
 boot_recovery=sunxi_flash read 40007800 recovery;boota 40007800
+#
+#
+#
+setargs_mmc=setenv bootargs console=${console} root=${mmc_root} init=${init} loglevel=${loglevel} partitions=${partitions} bootmenutimeout=10 datadev=mmcblk0p2
+#
+##
+bpiver=1
+bpi=bananapi
+board=bpi-m2
+chip=a31s
+service=linux
+panicarg=panic=10
+scriptaddr=0x44000000
+device=mmc
+partition=0:1
+kernel=uImage
+bootenv=uEnv.txt
+script=script.bin
+loadbootenv=fatload $device $partition $scriptaddr ${bpi}/${board}/${service}/${bootenv} || fatload $device $partition $scriptaddr ${bootenv}
+
+#
+#
+boot_normal=if run loadbootenv; then echo Loaded environment from ${bootenv}; env import -t ${scriptaddr} ${filesize}; fi; if test -n "${uenvcmd}"; then echo Running uenvcmd ...; run uenvcmd; fi; sunxi_flash read 40007800 boot;boota 40007800 boot;
+#
+#
+#
 boot_fastboot=fastboot
 #recovery key
 recovery_key_value_max=0x13
@@ -21,3 +45,9 @@ recovery_key_value_min=0x10
 #fastboot key
 fastboot_key_value_max=0x8
 fastboot_key_value_min=0x2
+
+#uboot system env config
+bootdelay=3
+#default bootcmd, will change at runtime according to key press
+bootcmd=run setargs_nand boot_normal#default nand boot
+#bootcmd=run setargs_mmc boot_normal#default mmc boot
