update build env. for SD image create with bpi-tools & bpi-migrate

--- a/sunxi-pack/chips/sun6i/configs/linux/BPI_M2_480P/env.cfg
+++ b/sunxi-pack/chips/sun6i/configs/linux/BPI_M2_480P/env.cfg
@@ -2,7 +2,7 @@
 #kernel command arguments
 console=ttyS0,115200
 nand_root=/dev/nandd
-mmc_root=/dev/sda2 rootwait
+mmc_root=/dev/mmcblk0p2 rootwait
 init=/init
 loglevel=8
 #set kernel cmdline if boot.img or recovery.img has no cmdline we will use this
@@ -15,7 +15,7 @@ boot_recovery=sunxi_flash read 40007800 recovery;boota 40007800
 #
 #
 #
-setargs_mmc=setenv bootargs console=${console} root=${mmc_root} init=${init} loglevel=${loglevel} partitions=${partitions} bootmenutimeout=10 datadev=sda2
+setargs_mmc=setenv bootargs console=${console} root=${mmc_root} init=${init} loglevel=${loglevel} partitions=${partitions} bootmenutimeout=10 datadev=mmcblk0p2
 #
 ##
 bpiver=1
